Message handling using a threadpool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(gossiping VERSION 0.0.1 LANGUAGES CXX)
 include_directories(src)
 
 find_package(nlohmann_json REQUIRED)
+find_package(boost REQUIRED)
 
 add_executable(${PROJECT_NAME} src/main.cpp src/message.cpp src/node.cpp)
 target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} boost::boost)
